--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,7 @@ version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
 uptodown-dlurl = "https://youtube.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
+enabled = false
 
 [Music]
 build-mode = "both"
@@ -21,6 +22,7 @@ arch = "both"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
 uptodown-dlurl = "https://youtube-music.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
+enabled = false
 
 [GooglePhotos]
 build-mode = "both"
@@ -28,10 +30,11 @@ arch = "both"
 version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/photos/"
 uptodown-dlurl = "https://google-photos.en.uptodown.com/android"
+enabled = false
 
 [Spotify]
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
-version = "9.0.44.4"
+version = "9.0.42.529"
 patcher-args = "-e 'Custom theme' -ObackgroundColor=#000000 -OoverridePlayerGradientColor=#000000 -ObackgroundColorSecondary=#000000 -OaccentColor=#000000 -OaccentColorPressed=#000000"
 
 # dont build on gh actions (https://github.com/j-hc/revanced-magisk-module/issues/554)
@@ -45,6 +48,7 @@ build-mode = "both"
 arch = "both"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.apps.youtube.music"
+enabled = false
 
 [YouTube-Extended]
 enabled = false
@@ -55,12 +59,14 @@ rv-brand = "ReVanced Extended"
 build-mode = "both"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
+enabled = false
 
 [Twitch]
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 uptodown-dlurl = "https://twitch.en.uptodown.com/android"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/tv.twitch.android.app"
+enabled = false
 
 [Twitter]
 enabled = false
@@ -68,17 +74,21 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/x-corp/twitter"
 build-mode = "apk"
 dpi = "120-640dpi"
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.twitter.android"
+enabled = false
 
 [TikTok]
 enabled = false
 # archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.zhiliaoapp.musically"
 included-patches = "'SIM spoof'"
+enabled = false
 
 [Messenger]
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
 arch = "arm64-v8a"
+enabled = false
 
 [IconPackStudio]
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
+enabled = false
